--- a/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'ngremotemedia' %}
 
-<div class="ngremotemedia-image" id="ngremotemedia-preview-{{ field.id }}" v-init:selected-image="RemoteMediaSelectedImage">
+<div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage">
     {% if field_value.resourceId %}
         <div class="image-wrap">
             <img v-if="selectedImage.type==='image'" :src="selectedImage.url"/>
@@ -11,6 +11,15 @@
             {% verbatim %}
                 <h3 class="title">{{ selectedImage.name }}</h3>
             {% endverbatim %}
+
+            <div class="image-meta-data">
+                <div class="ngremotemedia-alttext">
+                    {{ form_row(form.alt_text, { 'attr': {'v-model': 'selectedImage.alternateText'} }) }}
+                </div>
+
+                <v-select :options="allTags" v-model="selectedImage.tags" multiple taggable @input="handleTagsInput"></v-select>
+                {{ form_row(form.tags, { 'attr': {'class' : 'media-tags', 'v-model': 'selectedImage.tags', "hidden": "hidden"} }) }}
+            </div>
 
             {% if field_value.size %}
                 <p>{{ 'ngremotemedia.field.edit.size'|trans }}:
