NGSTACK-342 Fix bug when uploading file after removing file

--- a/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
@@ -14,7 +14,7 @@
             <Label for="new_file">
                 {{ 'ngremotemedia.field.edit.quick_upload'|trans }}
             </Label>
-            {{ form_row(form.new_file, { 'attr': {'@change': 'handleFileInputChange'} }) }}
+            {{ form_row(form.new_file, { 'attr': {'@change': 'handleFileInputChange',  'ref': 'fileInput'} }) }}
         </button>
     </div>
 </div>
