NGSTACK-342 fixes needed for new content on eZAdmin

--- a/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'ngremotemedia' %}
 
-<div id="ngremotemedia-buttons-{{ field.id }}" class="ngremotemedia-buttons" data-id="{{ field.id }}" data-contentobject-id="{{ contentId }}" data-version="{{ version }}">
+<div id="ngremotemedia-buttons-{{ field.id }}" class="ngremotemedia-buttons">
 
     {{ form_row(form.resource_id, { 'attr': {'class' : 'media-id', 'v-model': 'selectedImage.id'} }) }}
 
