--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -2,12 +2,15 @@
     {% set field = form.parent.vars.value.field %}
     {% set field_value = form.parent.vars.value.value %}
 
+    {#
     {% set content = app.request.get('view').content %}
     {% set contentId = content.id %}
     {% set version = content.versionInfo.versionNo %}
+    #}
     {% set type = field_value.metaData.resource_type|default('image') %}
 
-    {% set croppableVariations = ngrm_available_variations(content, true)  %}
+
+    {% set croppableVariations = ngrm_available_variations(app.request.attributes.get('contentTypeIdentifier'), true)  %}
     {% set availableVariations = croppableVariations|scaling_format|json_encode %}
 
     {% include '@NetgenRemoteMedia/ezadminui/js_templates.html.twig' with {
