NGSTACK-342 Fiz image size in admin form

--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -58,6 +58,12 @@
   .image-meta {
     overflow: visible;
   }
+
+  .image-wrap{
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 // General styles
