NGSTACK-342 add most of the translations

--- a/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
@@ -21,7 +21,7 @@
         </div>
 
         {% if field_value.size %}
-            <p>{{ 'ngremotemedia.field.edit.size'|trans }}:
+            <p>{{ 'ngrm.edit.label.size'|trans }}:
                 {% verbatim %}
                     {{formattedSize}}
                 {% endverbatim %}
