--- a/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/interactions.html.twig
@@ -4,15 +4,15 @@
 
     {{ form_row(form.resource_id, { 'attr': {'class' : 'media-id', 'v-model': 'selectedImage.id'} }) }}
 
-    <input v-if="!!selectedImage.id" type="button" @click="handleCropClicked" class="ngremotemedia-scale hid button" value="{{ 'ngremotemedia.field.edit.crop'|trans }}">
-    <input v-if="isCroppable" type="button" @click="handleRemoveMediaClicked" class="ngremotemedia-remove-file button" value="{{ 'ngremotemedia.field.edit.remove_file'|trans }}"/>
+    <input v-if="!!selectedImage.id" type="button" @click="handleCropClicked" class="ngremotemedia-scale hid button" value="{{ 'ngrm.edit.label.crop'|trans }}">
+    <input v-if="isCroppable" type="button" @click="handleRemoveMediaClicked" class="ngremotemedia-remove-file button" value="{{ 'ngrm.edit.label.remove_media'|trans }}"/>
 
-    <input type="button" @click="handleBrowseMediaClicked" class="ngremotemedia-remote-file button" value="{{ 'ngremotemedia.field.edit.manage_media'|trans }}"/>
+    <input type="button" @click="handleBrowseMediaClicked" class="ngremotemedia-remote-file button" value="{{ 'ngrm.edit.label.browse'|trans }}"/>
 
     <div class="ngremotemedia-local-file-container">
         <button type="button" class="btn btn-default ngremotemedia-local-file button upload-from-disk">
             <Label for="new_file">
-                {{ 'ngremotemedia.field.edit.quick_upload'|trans }}
+                {{ 'ngrm.edit.label.upload'|trans }}
             </Label>
             {{ form_row(form.new_file, { 'attr': {'@change': 'handleFileInputChange',  'ref': 'fileInput'} }) }}
         </button>
