--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -1,9 +1,23 @@
+{% trans_default_domain 'ngremotemedia' %}
+
 {% set thumbnail_url = type == 'image' ? netgen_remote_media(field_value, 'admin_preview').url : netgen_remote_video_thumbnail(field_value) %}
 {% set paths = paths|default([]) %}
 {% set available_variations = available_variations|default([]|json_encode) %}
 
 <script type="text/javascript">
     NgRemoteMediaTranslations = {
+        'browse_title': "{{ "ngrm.edit.vue.browse.title"|trans }}",
+        'browse_image_and_documents': "{{ "ngrm.edit.vue.browse.facets.image_and_documents"|trans }}",
+        'browse_video': "{{ "ngrm.edit.vue.browse.facets.video"|trans }}",
+        'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
+        'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
+        'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
+        'search_by_name': "{{ "ngrm.edit.vue.browse.facets.search_by_name"|trans }}",
+        'search_by_tag': "{{ "ngrm.edit.vue.browse.facets.search_by_tag"|trans }}",
+        'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
+        'browse_empty_folder_hint': "{{ "ngrm.edit.vue.browse.empty_folder_hint"|trans }}",
+        'browse_select': "{{ "ngrm.edit.vue.browse.select"|trans }}",
+        'load_more': "{{ "ngrm.edit.vue.browse.load_more"|trans }}",
         'Search for media': "Search for media",
         'Load more': "Load more",
         'Upload new media': 'Upload new media',
