NGSTACK-342 Fix js variables scoping

--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -15,7 +15,7 @@
         'available_variations': availableVariations
     } %}
 
-    <div class="ngremotemedia-type">
+    <div class="ngremotemedia-type" data-id="{{ field.id }}">
         {% include '@NetgenRemoteMedia/ezadminui/field/edit/preview.html.twig' %}
         {% include '@NetgenRemoteMedia/ezadminui/field/edit/interactions.html.twig' %}
 
