--- a/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'ngremotemedia' %}
 
-<div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage_{{ field.id }}" v-init:config="RemoteMediaConfig">
+<div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage" v-init:config="RemoteMediaConfig">
     <div class="image-wrap">
         <img v-if="selectedImage.type==='image'" :src="selectedImage.url" ref="image"/>
         <i v-else="selectedImage.type!=='image'" :class="nonImagePreviewClass" class="custom-icon big"></i>
