--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -45,7 +45,7 @@
         'prev': '&lt; Previous 25'
     };
 
-    RemoteMediaSelectedImage_{{ field.id }} = {
+    RemoteMediaSelectedImage_{{ fieldId }} = {
         {% if field_value.mediaType == 'image' %}
             url : "{{ thumbnail_url }}",
             type : "image",
