--- a/bundle/Resources/views/ngremotemedia_content_field.html.twig
+++ b/bundle/Resources/views/ngremotemedia_content_field.html.twig
@@ -71,7 +71,7 @@
         {% endif %}
 
     {% elseif field.value.mediaType == videoConst %}
-        {{ netgen_remote_video(content, field.fieldDefIdentifier, format)|raw }}
+        {{ netgen_remote_video(field.value, format)|raw }}
     {% else %}
         <a href="{{ netgen_remote_download(field.value) }}" target="_blank">{{ field.value.resourceId }}</a>
     {% endif %}
