--- a/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/preview.html.twig
@@ -2,8 +2,8 @@
 
 <div class="ngremotemedia-image" v-init:selected-image="RemoteMediaSelectedImage" v-init:config="RemoteMediaConfig">
     <div class="image-wrap">
-        <img v-if="selectedImage.type==='image'" :src="selectedImage.url" ref="image"/>
-        <i v-else="selectedImage.type!=='image'" :class="nonImagePreviewClass" class="custom-icon big"></i>
+        <img v-if="selectedImage.type==='image' || selectedImage.type==='video'" :src="selectedImage.url" ref="image"/>
+        <i v-else="selectedImage.type!=='image' && selectedImage.type!=='video'" :class="nonImagePreviewClass" class="custom-icon big"></i>
     </div>
 
     <div class="image-meta">
