--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -4,7 +4,7 @@
 
     {% set type = field_value.metaData.resource_type|default('image') %}
 
-    {% set croppableVariations = ngrm_available_variations(app.request.attributes.get('contentTypeIdentifier'), true)  %}
+    {% set croppableVariations = ngrm_available_variations(app.request.attributes.get('contentType').identifier, true)  %}
     {% set availableVariations = croppableVariations|scaling_format|json_encode %}
 
     {% include '@NetgenRemoteMedia/ezadminui/js_templates.html.twig' with {
