--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -54,7 +54,7 @@
         'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
         'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
         'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
-        'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
+        'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.cancel"|trans }}",
     };
 
     RemoteMediaSelectedImage_{{ fieldId }} = {
