--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -11,7 +11,10 @@
     NgRemoteMediaTranslations = {
         'browse_title': "{{ "ngrm.edit.vue.browse.title"|trans }}",
         'browse_image_and_documents': "{{ "ngrm.edit.vue.browse.facets.image_and_documents"|trans }}",
-        'browse_video': "{{ "ngrm.edit.vue.browse.facets.video"|trans }}",
+        'browse_video_and_audio': "{{ "ngrm.edit.vue.browse.facets.video_and_audio"|trans }}",
+        'browse_raw': "{{ "ngrm.edit.vue.browse.facets.raw"|trans }}",
+        'browse_select_media_type': "{{ "ngrm.edit.vue.browse.facets.select_media_type"|trans }}",
+        'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
         'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
         'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
         'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
