NGSTACK-502 Refactor folders controllers to be used for fetching all facets

--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -15,7 +15,7 @@
     {% include '@NetgenRemoteMedia/ezadminui/js_templates.html.twig' with {
         'paths': {
             'browse': path('netgen_remote_media_ezadmin_browse'),
-            'folders': path('netgen_remote_media_ezadmin_folders')
+            'facets': path('netgen_remote_media_ezadmin_facets')
         },
         'available_variations': availableVariations,
         'fieldId': field.id,
