NGSTACK-502 Prepare translations

--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -17,9 +17,10 @@
         'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
         'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
         'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
+        'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
+        'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
         'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
-        'search_by_name': "{{ "ngrm.edit.vue.browse.facets.search_by_name"|trans }}",
-        'search_by_tag': "{{ "ngrm.edit.vue.browse.facets.search_by_tag"|trans }}",
+        'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
         'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
         'browse_empty_folder_hint': "{{ "ngrm.edit.vue.browse.empty_folder_hint"|trans }}",
         'browse_select': "{{ "ngrm.edit.vue.browse.select"|trans }}",
