NGSTACK-493 Fix translations

--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -16,8 +16,10 @@
         'browse_select_media_type': "{{ "ngrm.edit.vue.browse.facets.select_media_type"|trans }}",
         'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
         'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
+        'browse_loading_folders': "{{ "ngrm.edit.vue.browse.facets.loading_folders"|trans }}",
         'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
         'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
+        'browse_loading_tags': "{{ "ngrm.edit.vue.browse.facets.loading_tags"|trans }}",
         'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
         'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
         'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
@@ -25,6 +27,23 @@
         'browse_empty_folder_hint': "{{ "ngrm.edit.vue.browse.empty_folder_hint"|trans }}",
         'browse_select': "{{ "ngrm.edit.vue.browse.select"|trans }}",
         'load_more': "{{ "ngrm.edit.vue.browse.load_more"|trans }}",
+        'crop_reset': "{{ "ngrm.edit.vue.crop.reset"|trans }}",
+        'crop_apply': "{{ "ngrm.edit.vue.crop.apply"|trans }}",
+        'crop_cancel': "{{ "ngrm.edit.vue.crop.cancel"|trans }}",
+        'crop_add': "{{ "ngrm.edit.vue.crop.add"|trans }}",
+        'crop_preview': "{{ "ngrm.edit.vue.crop.preview"|trans }}",
+        'crop_save_sizes': "{{ "ngrm.edit.vue.crop.save_sizes"|trans }}",
+        'crop_add_size': "{{ "ngrm.edit.vue.crop.add_size"|trans }}",
+        'crop_added_for_confirmation': "{{ "ngrm.edit.vue.crop.added_for_confirmation"|trans }}",
+        'crop_media_too_small': "{{ "ngrm.edit.vue.crop.media_too_small"|trans }}",
+        'media_galery_empty_folder': "{{ "ngrm.edit.vue.media_gallery.empty_folder"|trans }}",
+        'media_galery_upload_media': "{{ "ngrm.edit.vue.media_gallery.upload_media"|trans }}",
+        'media_galery_select': "{{ "ngrm.edit.vue.media_gallery.select"|trans }}",
+        'media_galery_load_more': "{{ "ngrm.edit.vue.media_gallery.load_more"|trans }}",
+        'upload_select_folder': "{{ "ngrm.edit.vue.upload.select_folder"|trans }}",
+        'upload_save': "{{ "ngrm.edit.vue.upload.save"|trans }}",
+        'upload_new_folder': "{{ "ngrm.edit.vue.upload.new_folder"|trans }}",
+        'upload_new': "{{ "ngrm.edit.vue.upload.new"|trans }}",
         'Search for media': "Search for media",
         'Load more': "Load more",
         'Upload new media': 'Upload new media',
