--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -191,3 +191,14 @@
     }
   }
 }
+
+.o2k7Skin .mceIcon.mce_ngremotemedia {
+    text-align: center;
+    line-height: 20px;
+    font-size: 1.25em;
+}
+
+.o2k7Skin .mceIcon.mce_ngremotemedia:before{
+    color: #3448C5;
+    content: '\f0c2';
+}
