--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -75,6 +75,13 @@
         'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
         'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
         'preview_size': "{{ "ngrm.edit.vue.preview.size"|trans }}",
+        'upload_breadcrumbs_info': "{{ "ngrm.edit.vue.upload.breadcrumbs_info"|trans }}",
+        'upload_root_folder': "{{ "ngrm.edit.vue.upload.root_folder"|trans }}",
+        'upload_info_text': "{{ "ngrm.edit.vue.upload.info_text"|trans }}",
+        'upload_button_select': "{{ "ngrm.edit.vue.upload.button.select"|trans }}",
+        'upload_button_create': "{{ "ngrm.edit.vue.upload.button.create"|trans }}",
+        'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
+        'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
         'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
         'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
         'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
