NGSTACK-504 Improve fieldtype styling

--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -74,6 +74,7 @@
         'interactions_manage_media': "{{ "ngrm.edit.vue.interactions.manage_media"|trans }}",
         'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
         'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
+        'preview_tags': "{{ "ngrm.edit.vue.preview.tags"|trans }}",
         'preview_size': "{{ "ngrm.edit.vue.preview.size"|trans }}",
         'upload_breadcrumbs_info': "{{ "ngrm.edit.vue.upload.breadcrumbs_info"|trans }}",
         'upload_root_folder': "{{ "ngrm.edit.vue.upload.root_folder"|trans }}",
