--- a/frontend/src/scss/ngremotemedia.scss
+++ b/frontend/src/scss/ngremotemedia.scss
@@ -70,11 +70,39 @@
 
   .image-meta {
     overflow: visible;
+
+    h3 {
+      font-weight: bold;
+    }
+
+    p {
+      color: #737373;
+    }
+
+    input.media-alttext {
+      width: 100%;
+      border-radius: 0;
+      border: 1px solid #e4e4e4;
+      padding: 7px 10px 7px 10px;
+      margin-bottom: 10px;
+    }
+
+    .image-meta-data {
+      margin-top: 20px;
+    }
   }
 
   .image-wrap{
     img {
       max-width: 100%;
+    }
+  }
+
+  .ngremotemedia-buttons {
+    margin-top: 20px;
+
+    .ngremotemedia-local-file-container {
+      margin-top: 20px;
     }
   }
 
