NGSTACK-504 Handle when no media is selected

--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -70,7 +70,9 @@
         'next': 'Next 25 &gt;',
         'prev': '&lt; Previous 25',
         'interactions_scale': "{{ "ngrm.edit.vue.interactions.scale"|trans }}",
+        'interactions_no_media_selected': "{{ "ngrm.edit.vue.interactions.no_media_selected"|trans }}",
         'interactions_remove_media': "{{ "ngrm.edit.vue.interactions.remove_media"|trans }}",
+        'interactions_select_media': "{{ "ngrm.edit.vue.interactions.select_media"|trans }}",
         'interactions_manage_media': "{{ "ngrm.edit.vue.interactions.manage_media"|trans }}",
         'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
         'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
