NGSTACK-504 Add missing comma

--- a/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field/edit/ngremotemedia.html.twig
@@ -16,7 +16,7 @@
         'paths': {
             'browse': path('netgen_remote_media_ezadmin_browse'),
             'load_facets': path('netgen_remote_media_ezadmin_facets_load'),
-            'load_folders': path('netgen_remote_media_ezadmin_folder_load')
+            'load_folders': path('netgen_remote_media_ezadmin_folder_load'),
             'create_folder': path('netgen_remote_media_ezadmin_folder_create')
         },
         'available_variations': availableVariations,
