--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -93,7 +93,7 @@
 
     RemoteMediaSelectedImage_{{ field_id }} = {
         url : "{% if field_value %}{{ field_value.secure_url }}{% endif %}",
-        type: "{% if field_value %}{{ field_value.metaData.resource_type|default('image') }}{% else %}image{% endif %}",
+        type: "{% if field_value %}{{ field_value.resourceType|default('image') }}{% else %}image{% endif %}",
         {% if not field_value or field_value.mediaType == 'image' %}
             mediaType: "image",
         {% elseif field_value.mediaType == 'video' %}
